fixing footer spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -353,7 +353,7 @@ header li:last-child {
 footer {
 	grid-column: 1 / 4;
 	grid-row: 7 / 8;
-	padding: 20px 500px;
+	padding: 20px 250px;
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
